--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="seccion-imagen-fondo">
       <h2>“Si te sientes triste, recuerda que dentro de ti tienes la capacidad de encontrar la alegría y la paz. Nuestra aplicación está aquí para ayudarte a descubrir ese camino hacia la felicidad y el bienestar.”</h2>
       <a href="Descarga.html" class="boton-descarga-izquierda">Descargar 🠮</a>
-      <a href="Recursos.html" class="boton-caracteristicas-derecha">Características</a>   
+      <a href="Problema.html" class="boton-caracteristicas-derecha">Problemática</a>   
   </div>
   <div class="seccionsegunda">
     <div class="seccion-mision">
