--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="navigation">
                 <ul>
 
-                    <li><a href="index.html">Inicio </a> </li>
+                    <li><a href="https://github.com/AlvaroRobloxSDLG/LadingPage.github.io/blob/c5ab307ffd78b3c417ee1500c5c787651bbe864c/index.html">Inicio </a> </li>
                     <li><a href="AcercaDe.html">Acerca de</a> </li>
                     <li><a href="Problema.html">Problemática</a> </li>
                     <li><a href="Contectaos.html">Contáctanos</a> </li>
