--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="Contectaos.html">Contáctanos</a> </li>
                     
                     <div class="button-container">
-                    <li><a href="Descarga.html" class="button">Descargar</a></li>
+                    <li><a href="https://github.com/AlvaroRobloxSDLG/LadingPage.github.io/blob/f3f17d35332322e685f15b637fce943c1c014138/public/Descarga.html" class="button">Descargar</a></li>
                     </div>
                 </ul>
             </nav>
