--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandingHome</title>
-    <link rel="stylesheet" href="styleHome.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="stylesheet" href="public/assets/styles/styleHome.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/assets/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="public/assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="public/assets/images/favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
   <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
@@ -16,17 +16,17 @@
 <body>
     <header class = "header">
         <div class = "container logo-nav-container">
-            <a href="logooficial.png" class="logo"> <img src="logooficial.png" alt="logo"> </a>
+            <a href="public/assets/images/logooficial.png" class="logo"> <img src="logooficial.png" alt="logo"> </a>
             <nav class="navigation">
                 <ul>
 
-                    <li><a href="https://github.com/AlvaroRobloxSDLG/LadingPage.github.io/blob/c5ab307ffd78b3c417ee1500c5c787651bbe864c/index.html">Inicio </a> </li>
-                    <li><a href="AcercaDe.html">Acerca de</a> </li>
-                    <li><a href="Problema.html">Problemática</a> </li>
-                    <li><a href="Contectaos.html">Contáctanos</a> </li>
+                    <li><a href="index.html">Inicio </a> </li>
+                    <li><a href="public/AcercaDe.html">Acerca de</a> </li>
+                    <li><a href="public/Problema.html">Problemática</a> </li>
+                    <li><a href="public/Contectaos.html">Contáctanos</a> </li>
                     
                     <div class="button-container">
-                    <li><a href="https://github.com/AlvaroRobloxSDLG/LadingPage.github.io/blob/f3f17d35332322e685f15b637fce943c1c014138/public/Descarga.html" class="button">Descargar</a></li>
+                    <li><a href="public/Descarga.html" class="button">Descargar</a></li>
                     </div>
                 </ul>
             </nav>
