--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </header>
     <div class="seccion-imagen-fondo">
       <h2>“Si te sientes triste, recuerda que dentro de ti tienes la capacidad de encontrar la alegría y la paz. Nuestra aplicación está aquí para ayudarte a descubrir ese camino hacia la felicidad y el bienestar.”</h2>
-      <a href="Descarga.html" class="boton-descarga-izquierda">Descargar 🠮</a>
-      <a href="Problema.html" class="boton-caracteristicas-derecha">Problemática</a>   
+      <a href="public/Descarga.html" class="boton-descarga-izquierda">Descargar 🠮</a>
+      <a href="public/Problema.html" class="boton-caracteristicas-derecha">Problemática</a>   
   </div>
   <div class="seccionsegunda">
     <div class="seccion-mision">
@@ -43,7 +43,7 @@
       <p class="parrafo-mision">
         Nuestra empresa se centra en la ayuda a adolescentes con problemas mentales. Nuestro producto, a diferencia de nuestros competidores, se centra en brindar experiencias únicas que se adapten a las necesidades del usuario. Tenemos la ventaja de poseer el poder de una inteligencia artificial capaz de predecir patrones de comportamiento y generar actividades en base a ellos.
       </p>
-      <img class="imagen-mision" src="Msiion.png" alt="Imagen de Misión">
+      <img class="public/assets/images/imagen-mision" src="Msiion.png" alt="Imagen de Misión">
   </div>
 
   <div class="seccion-vision">
@@ -51,41 +51,41 @@
       <p class="parrafo-vision">
         Queremos conseguir que los adolescentes con problemas mentales puedan apoyarse en nuestro producto para sobrellevar sus preocupaciones. A través de nuestra aplicación planeamos reducir en al menos un 20% las dolencias de los usuarios respecto a sus problemas mentales.
       </p>
-      <img class="imagen-vision" src="Vision.png" alt="Imagen de Visión">
+      <img class="public/assets/images/imagen-vision" src="Vision.png" alt="Imagen de Visión">
   </div>
 </div>
 
 <div class="seccionCara">
   <h2>Características</h2>
   <div class="cuadro">
-    <img src="imagencara1.png" alt="Imagen 1">
+    <img src="public/assets/images/imagencara1.png" alt="Imagen 1">
     <p>Úsalo en cualquier momento, según cómo te sientas.</p>
   </div>
   
   <div class="cuadro">
-    <img src="caracteristicas.avif" alt="Imagen 2">
+    <img src="public/assets/images/caracteristicas.avif" alt="Imagen 2">
     <p>Interactúa con profesionales altamente capacitados y sigue sus recomendaciones.</p>
   </div>
   
   <div class="cuadro">
-    <img src="iacelular.png" alt="Imagen 3">
+    <img src="public/assets/images/iacelular.png" alt="Imagen 3">
     <p>Utiliza tecnología avanzada de inteligencia artificial para brindar apoyo al usuario.</p>
   </div>
   
   <div class="cuadro">
-    <img src="interfazcara.jpg" alt="Imagen 4">
+    <img src="public/assets/images/interfazcara.jpg" alt="Imagen 4">
     <p>Interfaces intuitivas, claras y de fácil uso para los usuarios.</p>
   </div>
 
   <div class="descargarBoton">
-    <a href="Descarga.html">Descárgalo ahora mismo!</a>
+    <a href="public/Descarga.html">Descárgalo ahora mismo!</a>
   </div>
 </div>
 <br></br>
 <br></br>
 <footer class="pie-de-pagina">
   <div class="pieimagenes">
-    <img src="playapp.png" alt="Imagen 1">
+    <img src="public/assets/images/playapp.png" alt="Imagen 1">
   </div>
   <div class="pietexto">
     <p>© AiCareMindSystem, All Right Reserved. Designed ByAiCareMindSystem</p>
