--- a/public/Descarga.html
+++ b/public/Descarga.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Descarga</title>
-    <link rel="stylesheet" href="styleDescarga.css">
-	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="stylesheet" href="public/assets/styles/styleDescarga.css">
+	<link rel="apple-touch-icon" sizes="180x180" href="public/assets/images/pple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="public/assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="public/assets/images/favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
   <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
@@ -16,16 +16,16 @@
 <body>
   <header class = "header">
     <div class = "container logo-nav-container">
-        <a href="logooficial.png" class="logo"> <img src="logooficial.png" alt="logo"> </a>
+        <a href="public/assets/images/logooficial.png" class="logo"> <img src="public/assets/images/logooficial.png" alt="logo"> </a>
         <nav class="navigation">
             <ul>
-                <li><a href="index.html">Inicio </a> </li>
-                <li><a href="AcercaDe.html">Acerca de</a> </li>
-                <li><a href="Problema.html">Problemática</a> </li>
-                <li><a href="Contectaos.html">Contáctanos</a> </li>
+                 <li><a href="index.html">Inicio </a> </li>
+                 <li><a href="public/AcercaDe.html">Acerca de</a> </li>
+                 <li><a href="public/Problema.html">Problemática</a> </li>
+                 <li><a href="public/Contectaos.html">Contáctanos</a> </li>
 
                 <div class="button-container">
-                <li><a href="Descarga.html" class="button">Descargar</a></li>
+                <li><a href="public/Descarga.html" class="button">Descargar</a></li>
                 </div>
             </ul>
         </nav>
@@ -38,10 +38,10 @@
         <p class="parrafo-descarga">
           Descarga nuestra aplicación ahora mismo en tu dispositivo móvil. Ya está disponible en la App Store y Google Play. Disfruta de todas nuestras funciones exclusivas y mantente conectado con nosotros desde tu smartphone o tablet. Descárgala hoy y aprovecha al máximo Ai Care Mind.
         </p>
-        <img class="imagen-pequena" src="Icono playstore.png" alt="Imagen Pequeña 1">
-        <img class="imagen-pequena" src="iconoaple.png" alt="Imagen Pequeña 2">
+        <img class="imagen-pequena" src="public/assets/images/Icono playstore.png" alt="Imagen Pequeña 1">
+        <img class="imagen-pequena" src="public/assets/images/iconoaple.png" alt="Imagen Pequeña 2">
       <div class="imagenDerecha">
-        <img class="imagen-derecha" src="appImagen.jpg" alt="Imagen a la Derecha">
+        <img class="imagen-derecha" src="public/assets/images/appImagen.jpg" alt="Imagen a la Derecha">
       </div>
       </div>
 <br />
@@ -66,7 +66,7 @@
               <br>
               Estudiante
             </p>
-            <img class="imagen-testimonio" src="delsy.png" alt="Testimonio 1">
+            <img class="imagen-testimonio" src="public/assets/images/delsy.png" alt="Testimonio 1">
           </div>
       
           <div class="cuadro">
@@ -79,7 +79,7 @@
               <br>
               Estudiante
             </p>
-            <img class="imagen-testimonio" src="DiegoCano.png" alt="Testimonio 2">
+            <img class="imagen-testimonio" src="public/assets/images/DiegoCano.png" alt="Testimonio 2">
           </div>
       
           <div class="cuadro">
@@ -92,7 +92,7 @@
               <br>
               Licenciado
             </p>
-            <img class="imagen-testimonio" src="agusto.png" alt="Testimonio 3">
+            <img class="imagen-testimonio" src="public/assets/images/agusto.png" alt="Testimonio 3">
           </div>
         </div>
       </div>
@@ -106,7 +106,7 @@
       <br /><br /><br /><br /><br /><br />
       <footer class="pie-de-pagina">
         <div class="pieimagenes">
-          <img src="playapp.png" alt="Imagen 1">
+          <img src="public/assets/images/playapp.png" alt="Imagen 1">
         </div>
         <div class="pietexto">
           <p>© AiCareMindSystem, All Right Reserved. Designed ByAiCareMindSystem</p>
