--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </nav>
         </div>
     </header>
-    <div class="seccion-imagen-fondo">
+    <div class="public/assets/images/seccion-imagen-fondo">
       <h2>“Si te sientes triste, recuerda que dentro de ti tienes la capacidad de encontrar la alegría y la paz. Nuestra aplicación está aquí para ayudarte a descubrir ese camino hacia la felicidad y el bienestar.”</h2>
       <a href="public/Descarga.html" class="boton-descarga-izquierda">Descargar 🠮</a>
       <a href="public/Problema.html" class="boton-caracteristicas-derecha">Problemática</a>   
@@ -43,7 +43,7 @@
       <p class="parrafo-mision">
         Nuestra empresa se centra en la ayuda a adolescentes con problemas mentales. Nuestro producto, a diferencia de nuestros competidores, se centra en brindar experiencias únicas que se adapten a las necesidades del usuario. Tenemos la ventaja de poseer el poder de una inteligencia artificial capaz de predecir patrones de comportamiento y generar actividades en base a ellos.
       </p>
-      <img class="public/assets/images/imagen-mision" src="Msiion.png" alt="Imagen de Misión">
+      <img class="public/assets/images/imagen-mision" src="public/assets/images/Msiion.png" alt="Imagen de Misión">
   </div>
 
   <div class="seccion-vision">
@@ -51,7 +51,7 @@
       <p class="parrafo-vision">
         Queremos conseguir que los adolescentes con problemas mentales puedan apoyarse en nuestro producto para sobrellevar sus preocupaciones. A través de nuestra aplicación planeamos reducir en al menos un 20% las dolencias de los usuarios respecto a sus problemas mentales.
       </p>
-      <img class="public/assets/images/imagen-vision" src="Vision.png" alt="Imagen de Visión">
+      <img class="public/assets/images/imagen-vision" src="public/assets/images/Vision.png" alt="Imagen de Visión">
   </div>
 </div>
 
