--- a/public/Contectaos.html
+++ b/public/Contectaos.html
@@ -6,9 +6,9 @@
     <title>Contáctanos</title>
     <link rel="stylesheet" href="styleconta.css">
     <script src="ContactanosJava.js"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/assets/images/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="public/assets/images/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="public/assets/images/favicon-16x16.png">
       <link rel="manifest" href="site.webmanifest">
       <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
       <meta name="msapplication-TileColor" content="#da532c">
@@ -16,7 +16,7 @@
 </head>
 <header class = "header">
     <div class = "container logo-nav-container">
-        <a href="logooficial.png" class="logo"> <img src="logooficial.png" alt="logo"> </a>
+        <a href="public/assets/images/logooficial.png" class="logo"> <img src="public/assets/images/logooficial.png" alt="logo"> </a>
         <nav class="navigation">
             <ul>
 
@@ -57,11 +57,11 @@
     </div>
 
     <div class="telficono">
-        <img src="telefono.jpg" alt="telefono-icon">
+        <img src="public/assets/images/telefono.jpg" alt="telefono-icon">
     </div>
 
     <div class="correoicono">
-        <img src="correo.jpg" alt="correo-icon">
+        <img src="public/assets/images/correo.jpg" alt="correo-icon">
     </div>
 
     <form action="" method="post" id="myForm">
@@ -177,7 +177,7 @@
 2
 <footer class="pie-de-pagina">
     <div class="pieimagenes">
-      <img src="playapp.png" alt="Imagen 1">
+      <img src="public/assets/images/playapp.png" alt="Imagen 1">
     </div>
     <div class="pietexto">
       <p>© AiCareMindSystem, All Right Reserved. Designed ByAiCareMindSystem</p>
