--- a/public/Contectaos.html
+++ b/public/Contectaos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contáctanos</title>
-    <link rel="stylesheet" href="styleconta.css">
+    <link rel="stylesheet" href="public/assets/styles/styleconta.css">
     <script src="ContactanosJava.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="public/assets/images/apple-touch-icon.png">
      <link rel="icon" type="image/png" sizes="32x32" href="public/assets/images/favicon-32x32.png">
@@ -20,13 +20,13 @@
         <nav class="navigation">
             <ul>
 
-                <li><a href="index.html">Inicio </a> </li>
-                <li><a href="AcercaDe.html">Acerca de</a> </li>
-                <li><a href="Problema.html">Problemática</a> </li>
-                <li><a href="Contectaos.html">Contáctanos</a> </li>
+                <li><a href="index.html">Inicio </a> </li>h
+                <li><a href="public/AcercaDe.html">Acerca de</a> </li>
+                <li><a href="public/Problema.html">Problemática</a> </li>
+                <li><a href="public/Contectaos.html">Contáctanos</a> </li>
                 
                 <div class="button-container">
-                <li><a href="Descarga.html" class="button">Descargar</a></li>
+                <li><a href="public/Descarga.html" class="button">Descargar</a></li>
                 </div>
             </ul>
         </nav>
