--- a/public/Contectaos.html
+++ b/public/Contectaos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contáctanos</title>
     <link rel="stylesheet" href="public/assets/styles/styleconta.css">
-    <script src="ContactanosJava.js"></script>
+    <script src="public/assets/scripts/ContactanosJava.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="public/assets/images/apple-touch-icon.png">
      <link rel="icon" type="image/png" sizes="32x32" href="public/assets/images/favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="public/assets/images/favicon-16x16.png">
