--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class = "header">
         <div class = "container logo-nav-container">
-            <a href="public/assets/images/logooficial.png" class="logo"> <img src="logooficial.png" alt="logo"> </a>
+            <a href="public/assets/images/logooficial.png" class="logo"> <img src="public/assets/images/logooficial.png" alt="logo"> </a>
             <nav class="navigation">
                 <ul>
 
