--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </nav>
         </div>
     </header>
-    <div class="public/assets/images/seccion-imagen-fondo">
+    <div class="seccion-imagen-fondo">
       <h2>“Si te sientes triste, recuerda que dentro de ti tienes la capacidad de encontrar la alegría y la paz. Nuestra aplicación está aquí para ayudarte a descubrir ese camino hacia la felicidad y el bienestar.”</h2>
       <a href="public/Descarga.html" class="boton-descarga-izquierda">Descargar 🠮</a>
       <a href="public/Problema.html" class="boton-caracteristicas-derecha">Problemática</a>   
