--- a/public/AcercaDe.html
+++ b/public/AcercaDe.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AcercaDe</title>
     <link rel="stylesheet" href="assets/styles/styleAcerca.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="public/assets/images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="public/assets/images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="public/assets/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
   <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
@@ -17,17 +17,17 @@
 <body>
     <header class = "header">
         <div class = "container logo-nav-container">
-            <a href="public/assets/images/logooficial.png" class="logo"> <img src="public/assets/images/logooficial.png" alt="logo"> </a>
+            <a href="assets/images/logooficial.png" class="logo"> <img src="assets/images/logooficial.png" alt="logo"> </a>
             <nav class="navigation">
                 <ul>
     
                     <li><a href="index.html">Inicio </a> </li>
-                    <li><a href="public/AcercaDe.html">Acerca de</a> </li>
-                    <li><a href="public/Problema.html">Problemática</a> </li>
-                    <li><a href="public/Contectaos.html">Contáctanos</a> </li>
+                    <li><a href="AcercaDe.html">Acerca de</a> </li>
+                    <li><a href="Problema.html">Problemática</a> </li>
+                    <li><a href="Contectaos.html">Contáctanos</a> </li>
                     
                     <div class="button-container">
-                    <li><a href="public/Descarga.html" class="button">Descargar</a></li>
+                    <li><a href="Descarga.html" class="button">Descargar</a></li>
                     </div>
                 </ul>
             </nav>
@@ -50,35 +50,35 @@
         <div class="contenedor-imagen">
 
         <div class="contenedor">
-            <img src="public/assets/images/gavancho.jpg" alt="gavancho">
+            <img src="assets/images/gavancho.jpg" alt="gavancho">
             <div class="overlay">
                 <div class="texto">Loy Harold Gavancho Luján con código u202117526, estudiante de las carreras de Ingeniería de Sistemas de Información por la UPC y estudiante de la carrera de Ingeniería Industrial por la Universidad de Arizona. Considero que a partir de la experiencia que estoy desarrollando como estudiante de ingeniería en dos ramas disímiles, me será pertinente aportar habilidades vinculadas con el escalamiento del negocio y las posibles decisiones estratégicas.</div>
             </div>
         </div>
 
         <div class="contenedor">
-            <img src="public/assets/images/pinto.jpg" alt="pinto">
+            <img src="assets/images/pinto.jpg" alt="pinto">
             <div class="overlay">
                 <div class="texto">Mi nombre Alvaro Pinto, soy un estudiante de 18 años que cursa el 4to ciclo de la carrera Ingeniería de Software con el código estudiantil U202213384. Considero que mis ideas pueden apoyar al trabajo en grupo y asimismo al proyecto con el fin de obtener los mejores resultados posibles. Como integrante de este grupo haré uso de los conocimientos que he adquirido sobre la programación en el lenguaje C# y C++.</div>
             </div>
         </div>
 
         <div class="contenedor">
-            <img src="public/assets/images/serrano.jpg" alt="serrano">
+            <img src="assets/images/serrano.jpg" alt="serrano">
             <div class="overlay">
                 <div class="texto">Me llamo Nelson Serrano, estudiante del cuarto ciclo de Ingeniería de Software con el código estudiantil U202214733. Las habilidades en las que puedo aportar en el grupo y las he ido aprendiendo desde que empecé en la universidad han sido dominio y práctica de C++, documentación de proyectos y metodologías ágiles, conocimientos básicos de base de datos y python.</div>
             </div>
         </div>
 
         <div class="contenedor">
-            <img src="public/assets/images/espinoza.jpg" alt="espinoza">
+            <img src="assets/images/espinoza.jpg" alt="espinoza">
             <div class="overlay">
                 <div class="texto">Mi nombre Christian Espinoza, soy un estudiante de 18 años que cursa el 4to ciclo de la carrera Ingeniería de Software con el código estudiantil U202213208. Poseo ideas únicas, estrafalarias e innovadoras para que el trabajo logre sobresalir. Adicionalmente también tengo experiencia en editar diferentes tipos de multimedia como videos y un conocimiento general en el desarrollo de aplicaciones.</div>
             </div>
         </div>
 
         <div class="contenedor">
-            <img src="public/assets/images/mendoza.jpg" alt="mendoza">
+            <img src="assets/images/mendoza.jpg" alt="mendoza">
             <div class="overlay">
                 <div class="texto">Mi nombre es Mathias Mendoza, tengo 18 años y estoy cursando el 3er ciclo en la carrera de Ingeniería de Software de la Universidad Peruana de Ciencias Aplicadas. Tengo especialidad en el lenguaje C++ por lo estudiado en la universidad, además de Python que fue lo que practiqué por clases online.</div>
             </div>
@@ -117,7 +117,7 @@
 
 <footer class="pie-de-pagina">
   <div class="pieimagenes">
-    <img src="public/assets/images/playapp.png" alt="Imagen 1">
+    <img src="assets/images/playapp.png" alt="Imagen 1">
   </div>
   <div class="pietexto">
     <p>© AiCareMindSystem, All Right Reserved. Designed ByAiCareMindSystem</p>
