--- a/public/Contectaos.html
+++ b/public/Contectaos.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contáctanos</title>
-    <link rel="stylesheet" href="public/assets/styles/styleconta.css">
-    <script src="public/assets/scripts/ContactanosJava.js"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="public/assets/images/apple-touch-icon.png">
-     <link rel="icon" type="image/png" sizes="32x32" href="public/assets/images/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="public/assets/images/favicon-16x16.png">
+    <link rel="stylesheet" href="assets/styles/styleconta.css">
+    <script src="assets/scripts/ContactanosJava.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
       <link rel="manifest" href="site.webmanifest">
       <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
       <meta name="msapplication-TileColor" content="#da532c">
@@ -16,17 +16,17 @@
 </head>
 <header class = "header">
     <div class = "container logo-nav-container">
-        <a href="public/assets/images/logooficial.png" class="logo"> <img src="public/assets/images/logooficial.png" alt="logo"> </a>
+        <a href="assets/images/logooficial.png" class="logo"> <img src="assets/images/logooficial.png" alt="logo"> </a>
         <nav class="navigation">
             <ul>
 
                 <li><a href="index.html">Inicio </a> </li>h
-                <li><a href="public/AcercaDe.html">Acerca de</a> </li>
-                <li><a href="public/Problema.html">Problemática</a> </li>
-                <li><a href="public/Contectaos.html">Contáctanos</a> </li>
+                <li><a href="AcercaDe.html">Acerca de</a> </li>
+                <li><a href="Problema.html">Problemática</a> </li>
+                <li><a href="Contectaos.html">Contáctanos</a> </li>
                 
                 <div class="button-container">
-                <li><a href="public/Descarga.html" class="button">Descargar</a></li>
+                <li><a href="Descarga.html" class="button">Descargar</a></li>
                 </div>
             </ul>
         </nav>
@@ -57,11 +57,11 @@
     </div>
 
     <div class="telficono">
-        <img src="public/assets/images/telefono.jpg" alt="telefono-icon">
+        <img src="assets/images/telefono.jpg" alt="telefono-icon">
     </div>
 
     <div class="correoicono">
-        <img src="public/assets/images/correo.jpg" alt="correo-icon">
+        <img src="assets/images/correo.jpg" alt="correo-icon">
     </div>
 
     <form action="" method="post" id="myForm">
@@ -177,7 +177,7 @@
 2
 <footer class="pie-de-pagina">
     <div class="pieimagenes">
-      <img src="public/assets/images/playapp.png" alt="Imagen 1">
+      <img src="assets/images/playapp.png" alt="Imagen 1">
     </div>
     <div class="pietexto">
       <p>© AiCareMindSystem, All Right Reserved. Designed ByAiCareMindSystem</p>
