--- a/public/Problema.html
+++ b/public/Problema.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problemática</title>
-    <link rel="stylesheet" href="public/assets/styles/styleproblem.css">
-   <link rel="apple-touch-icon" sizes="180x180" href="public/assets/images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="public/assets/images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="public/assets/images/favicon-16x16.png">
+    <link rel="stylesheet" href="assets/styles/styleproblem.css">
+   <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
   <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
@@ -24,16 +24,16 @@
 <body>
     <header class = "header">
         <div class = "container logo-nav-container">
-            <a href="public/assets/images/logooficial.png" class="logo"> <img src="public/assets/images/logooficial.png" alt="logo"> </a>
+            <a href="assets/images/logooficial.png" class="logo"> <img src="assets/images/logooficial.png" alt="logo"> </a>
             <nav class="navigation">
                 <ul>
                     <li><a href="index.html">Inicio </a> </li>
-                    <li><a href="public/AcercaDe.html">Acerca de</a> </li>
-                    <li><a href="public/Problema.html">Problemática</a> </li>
-                    <li><a href="public/Contectaos.html">Contáctanos</a> </li>
+                    <li><a href="AcercaDe.html">Acerca de</a> </li>
+                    <li><a href="Problema.html">Problemática</a> </li>
+                    <li><a href="Contectaos.html">Contáctanos</a> </li>
 
                     <div class="button-container">
-                    <li><a href="public/Descarga.html" class="button">Descargar</a></li>
+                    <li><a href="Descarga.html" class="button">Descargar</a></li>
                     </div>
                 </ul>
             </nav>
@@ -46,7 +46,7 @@
             <p>
                 Los trastornos psicológicos en adolescentes afectan su bienestar y relaciones, dificultando la búsqueda de ayuda. Nuestra solución busca brindar el apoyo necesario.
             </p>
-            <img src="public/assets/images/proble.png" alt="Imagen Bordeada">
+            <img src="assets/images/proble.png" alt="Imagen Bordeada">
         </div>
     </div>
     <div class="seccion-puntos">
@@ -79,7 +79,7 @@
         </div>
         <div class="circulo4"> </div>
         <div class="cirpe4"> </div>
-        <img src="public/assets/images/problematica.jpg" alt="Texto alternativo de la imagen" class="imgpro">
+        <img src="assets/images/problematica.jpg" alt="Texto alternativo de la imagen" class="imgpro">
         <br></br>
     </div>
 
@@ -87,7 +87,7 @@
 
     <footer class="pie-de-pagina">
         <div class="pieimagenes">
-          <img src="public/assets/images/playapp.png" alt="Imagen 1">
+          <img src="assets/images/playapp.png" alt="Imagen 1">
         </div>
         <div class="pietexto">
           <p>© AiCareMindSystem, All Right Reserved. Designed ByAiCareMindSystem</p>
