--- a/public/AcercaDe.html
+++ b/public/AcercaDe.html
@@ -22,12 +22,12 @@
                 <ul>
     
                     <li><a href="index.html">Inicio </a> </li>
-                    <li><a href="AcercaDe.html">Acerca de</a> </li>
-                    <li><a href="Problema.html">Problemática</a> </li>
-                    <li><a href="Contectaos.html">Contáctanos</a> </li>
+                    <li><a href="public/AcercaDe.html">Acerca de</a> </li>
+                    <li><a href="public/Problema.html">Problemática</a> </li>
+                    <li><a href="public/Contectaos.html">Contáctanos</a> </li>
                     
                     <div class="button-container">
-                    <li><a href="Descarga.html" class="button">Descargar</a></li>
+                    <li><a href="public/Descarga.html" class="button">Descargar</a></li>
                     </div>
                 </ul>
             </nav>
