--- a/public/Problema.html
+++ b/public/Problema.html
@@ -33,7 +33,7 @@
                     <li><a href="public/Contectaos.html">Contáctanos</a> </li>
 
                     <div class="button-container">
-                    <li><a href="Descarga.html" class="button">Descargar</a></li>
+                    <li><a href="public/Descarga.html" class="button">Descargar</a></li>
                     </div>
                 </ul>
             </nav>
