--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <p class="parrafo-mision">
         Nuestra empresa se centra en la ayuda a adolescentes con problemas mentales. Nuestro producto, a diferencia de nuestros competidores, se centra en brindar experiencias únicas que se adapten a las necesidades del usuario. Tenemos la ventaja de poseer el poder de una inteligencia artificial capaz de predecir patrones de comportamiento y generar actividades en base a ellos.
       </p>
-      <img class="public/assets/images/imagen-mision" src="public/assets/images/Msiion.png" alt="Imagen de Misión">
+      <img class="imagen-mision" src="public/assets/images/Msiion.png" alt="Imagen de Misión">
   </div>
 
   <div class="seccion-vision">
@@ -51,7 +51,7 @@
       <p class="parrafo-vision">
         Queremos conseguir que los adolescentes con problemas mentales puedan apoyarse en nuestro producto para sobrellevar sus preocupaciones. A través de nuestra aplicación planeamos reducir en al menos un 20% las dolencias de los usuarios respecto a sus problemas mentales.
       </p>
-      <img class="public/assets/images/imagen-vision" src="public/assets/images/Vision.png" alt="Imagen de Visión">
+      <img class="imagen-vision" src="public/assets/images/Vision.png" alt="Imagen de Visión">
   </div>
 </div>
 
