--- a/public/Contectaos.html
+++ b/public/Contectaos.html
@@ -26,7 +26,7 @@
                 <li><a href="Contectaos.html">Contáctanos</a> </li>
                 
                 <div class="button-container">
-                <li><a href="public/Descarga.html" class="button">Descargar</a></li>
+                <li><a href="Descarga.html" class="button">Descargar</a></li>
                 </div>
             </ul>
         </nav>
