--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
                     <p class="lead">Queremos conseguir que los adolescentes con problemas mentales puedan apoyarse en nuestro producto para sobrellevar sus preocupaciones. A través de nuestra aplicación planeamos reducir en al menos un 20% las dolencias de los usuarios respecto a sus problemas mentales.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="assets/images/monitor.png" alt="">
+                    <img class="img-responsive" src="assets/images/vision.png" alt="">
                 </div>
             </div>
 
