--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
     <header class = "header">
         <div class = "container logo-nav-container">
-            <a href="public/assets/images/logooficial.png" class="logo"> <img src="public/assets/images/logooficial.png" alt="logo"> </a>
+            <a href="assets/images/logooficial.png" class="logo"> <img src="public/assets/images/logooficial.png" alt="logo"> </a>
             <nav class="navigation">
                 <ul>
 
-                    <li><a href="index.html">Inicio </a> </li>
+                    <li><a href="../LadingPage.github.io-main/index.html">Inicio </a> </li>
                     <li><a href="public/AcercaDe.html">Acerca de</a> </li>
                     <li><a href="public/Problema.html">Problemática</a> </li>
                     <li><a href="public/Contectaos.html">Contáctanos</a> </li>
@@ -32,7 +32,7 @@
             </nav>
         </div>
     </header>
-    <div class="seccion-imagen-fondo"  style="background-image: url('public/assets/images/Hola.jpg');" >
+    <div class="seccion-imagen-fondo" style="background-image: url('public/assets/images/Hola.jpg');" >
       <h2>“Si te sientes triste, recuerda que dentro de ti tienes la capacidad de encontrar la alegría y la paz. Nuestra aplicación está aquí para ayudarte a descubrir ese camino hacia la felicidad y el bienestar.”</h2>
       <a href="public/Descarga.html" class="boton-descarga-izquierda">Descargar 🠮</a>
       <a href="public/Problema.html" class="boton-caracteristicas-derecha">Problemática</a>   
