--- a/public/Contectaos.html
+++ b/public/Contectaos.html
@@ -20,7 +20,7 @@
         <nav class="navigation">
             <ul>
 
-                <li><a href="index.html">Inicio </a> </li>h
+                <li><a href="../index.html">Inicio </a> </li>h
                 <li><a href="AcercaDe.html">Acerca de</a> </li>
                 <li><a href="Problema.html">Problemática</a> </li>
                 <li><a href="Contectaos.html">Contáctanos</a> </li>
