--- a/public/Descarga.html
+++ b/public/Descarga.html
@@ -19,7 +19,7 @@
         <a href="assets/images/logooficial.png" class="logo"> <img src="assets/images/logooficial.png" alt="logo"> </a>
         <nav class="navigation">
             <ul>
-                 <li><a href="index.html">Inicio </a> </li>
+                 <li><a href="../index.html">Inicio </a> </li>
                  <li><a href="AcercaDe.html">Acerca de</a> </li>
                  <li><a href="Problema.html">Problemática</a> </li>
                  <li><a href="Contectaos.html">Contáctanos</a> </li>
@@ -41,7 +41,7 @@
         <img class="imagen-pequena" src="assets/images/Icono playstore.png" alt="Imagen Pequeña 1">
         <img class="imagen-pequena" src="assets/images/iconoaple.png" alt="Imagen Pequeña 2">
       <div class="imagenDerecha">
-        <img class="imagen-derecha" src="assets/images/appImagen.jpg" alt="Imagen a la Derecha">
+        <img class="imagen-derecha" src="assets/images/appImagen.png" alt="Imagen a la Derecha">
       </div>
       </div>
 <br />
