--- a/public/Problema.html
+++ b/public/Problema.html
@@ -27,7 +27,7 @@
             <a href="assets/images/logooficial.png" class="logo"> <img src="assets/images/logooficial.png" alt="logo"> </a>
             <nav class="navigation">
                 <ul>
-                    <li><a href="index.html">Inicio </a> </li>
+                    <li><a href="../index.html">Inicio </a> </li>
                     <li><a href="AcercaDe.html">Acerca de</a> </li>
                     <li><a href="Problema.html">Problemática</a> </li>
                     <li><a href="Contectaos.html">Contáctanos</a> </li>
