--- a/public/Vidios.html
+++ b/public/Vidios.html
@@ -25,7 +25,7 @@
             <nav class="navigation">
                 <ul>
 
-                    <li><a href="index.html">Inicio </a> </li>
+                   <li><a href="../index.html">Inicio </a> </li>
                     <li><a href="AcercaDe.html">Acerca de</a> </li>
                     <li><a href="Problema.html">Problemática</a> </li>
                     <li><a href="Contectaos.html">Contáctanos</a> </li>
