--- a/public/Vidios.html
+++ b/public/Vidios.html
@@ -53,8 +53,8 @@
 
 <select id="seleccionar" onchange="mostrarVideo()">
     <option value="" disabled selected>Selecciona una opción</option>
-    <option value="ssstwitter.com_1700082371478.mp4">Video About the product</option>
-    <option value="ssstwitter.com_1700082355200.mp4">Video Meet the team</option>
+    <option value="AboutProduct.mp4">Video About the product</option>
+    <option value=".mp4">Video Meet the team</option>
     <option value="video3.mp4">Video Expo</option>
 </select>
 </div>
