--- a/public/Vidios.html
+++ b/public/Vidios.html
@@ -54,8 +54,8 @@
 <select id="seleccionar" onchange="mostrarVideo()">
     <option value="" disabled selected>Selecciona una opción</option>
     <option value="AboutProduct.mp4">Video About the product</option>
-    <option value=".mp4">Video Meet the team</option>
-    <option value="video3.mp4">Video Expo</option>
+    <option value=".mp4">Video About the team</option>
+    <option value="video3.mp4">Video About Us</option>
 </select>
 </div>
 <br />
