--- a/public/Problema.html
+++ b/public/Problema.html
@@ -31,6 +31,7 @@
                     <li><a href="AcercaDe.html">Acerca de</a> </li>
                     <li><a href="Problema.html">Problemática</a> </li>
                     <li><a href="Contectaos.html">Contáctanos</a> </li>
+                    <li><a href="Vidios.html">Videos</a> </li>
 
                     <div class="button-container">
                     <li><a href="Descarga.html" class="button">Descargar</a></li>
