--- a/public/Descarga.html
+++ b/public/Descarga.html
@@ -19,10 +19,12 @@
         <a href="assets/images/logooficial.png" class="logo"> <img src="assets/images/logooficial.png" alt="logo"> </a>
         <nav class="navigation">
             <ul>
-                 <li><a href="../index.html">Inicio </a> </li>
-                 <li><a href="AcercaDe.html">Acerca de</a> </li>
-                 <li><a href="Problema.html">Problemática</a> </li>
-                 <li><a href="Contectaos.html">Contáctanos</a> </li>
+               	    <li><a href="../index.html">Inicio </a> </li>
+                    <li><a href="AcercaDe.html">Acerca de</a> </li>
+                    <li><a href="Problema.html">Problemática</a> </li>
+                    <li><a href="Contectaos.html">Contáctanos</a> </li>
+                    <li><a href="Vidios.html">Videos</a> </li>
+                    
 
                 <div class="button-container">
                 <li><a href="Descarga.html" class="button">Descargar</a></li>
