--- a/public/Contectaos.html
+++ b/public/Contectaos.html
@@ -20,10 +20,12 @@
         <nav class="navigation">
             <ul>
 
-                <li><a href="../index.html">Inicio </a> </li>h
-                <li><a href="AcercaDe.html">Acerca de</a> </li>
-                <li><a href="Problema.html">Problemática</a> </li>
-                <li><a href="Contectaos.html">Contáctanos</a> </li>
+                <li><a href="../index.html">Inicio </a> </li>
+                    <li><a href="AcercaDe.html">Acerca de</a> </li>
+                    <li><a href="Problema.html">Problemática</a> </li>
+                    <li><a href="Contectaos.html">Contáctanos</a> </li>
+                    <li><a href="Vidios.html">Videos</a> </li>
+                    
                 
                 <div class="button-container">
                 <li><a href="Descarga.html" class="button">Descargar</a></li>
