--- a/public/Vidios.html
+++ b/public/Vidios.html
@@ -54,10 +54,8 @@
     <select id="seleccionar" onchange="mostrarVideo()">
         <option value="" disabled selected>Selecciona una opción</option>
         <option value="https://www.youtube.com/embed/cx8tXooXnzk">Video About the Product</option>
-        <!-- Reemplaza "TU_ID_DE_VIDEO" con la ID real del video de YouTube -->
-        <option value="https://www.youtube.com/embed/cx8tXooXnzk">Video About the Team
+        <option value="https://www.youtube.com/embed/cx8tXooXnzk">Video About the Team</option>
         <option value="https://www.youtube.com/embed/Otra_ID_DE_VIDEO">Video About Us</option>
-        </option>
     </select>
     
     
