--- a/public/Vidios.html
+++ b/public/Vidios.html
@@ -54,8 +54,8 @@
     <select id="seleccionar" onchange="mostrarVideo()">
         <option value="" disabled selected>Selecciona una opción</option>
         <option value="https://www.youtube.com/embed/cx8tXooXnzk">Video About the Product</option>
-        <option value="https://www.youtube.com/embed/cx8tXooXnzk">Video About the Team</option>
-        <option value="https://www.youtube.com/embed/Otra_ID_DE_VIDEO">Video About Us</option>
+        <option value="https://www.youtube.com/embed/r1gykZT00TQ">Video About the Team</option>
+        <option value="https://www.youtube.com/embed/">Video About Us</option>
     </select>
     
     
