--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="navigation">
                 <ul>
 
-                    <li><a href="../LadingPage.github.io-main/index.html">Inicio </a> </li>
+                    <li><a href="index.html">Inicio </a> </li>
                     <li><a href="public/AcercaDe.html">Acerca de</a> </li>
                     <li><a href="public/Problema.html">Problemática</a> </li>
                     <li><a href="public/Contectaos.html">Contáctanos</a> </li>
