--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="public/AcercaDe.html">Acerca de</a> </li>
                     <li><a href="public/Problema.html">Problemática</a> </li>
                     <li><a href="public/Contectaos.html">Contáctanos</a> </li>
-                    <li><a href="Vidios.html">Videos</a> </li>
+                    <li><a href="public/Vidios.html">Videos</a> </li>
                     
                     <div class="button-container">
                     <li><a href="public/Descarga.html" class="button">Descargar</a></li>
