--- a/public/Vidios.html
+++ b/public/Vidios.html
@@ -17,9 +17,9 @@
 
 
 <body>
-    <header class = "header">
+   <header class = "header">
         <div class = "container logo-nav-container">
-            <a href="logooficial.png" class="logo"> <img src="logooficial.png" alt="logo"> </a>
+            <a href="assets/images/logooficial.png" class="logo"> <img src="assets/images/logooficial.png" alt="logo"> </a>
             <nav class="navigation">
                 <ul>
 
